<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"/>
    <!-->
    <item
        android:id="@+id/sortByOption"
        android:title="@string/sort"
        app:showAsAction="never"/>
    <!-->
    <item
        android:id="@+id/sortByOption"
        android:title="@string/sort"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/tittle"
                android:title="@string/tittle"
                />
            <item
                android:id="@+id/author"
                android:title="@string/author"
                />
            <item
                android:id="@+id/priority"
                android:title="@string/priority"
                app:showAsAction="never"
                />
        </menu>



    </item>
</menu>