<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.FilmEditFragment">

    <EditText
        android:id="@+id/filmTittle"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/tittle"
        android:inputType="textShortMessage|textLongMessage|text"
        android:autofillHints=""
        android:paddingLeft="10sp"
        android:paddingStart="10sp"
        tools:ignore="RtlSymmetry" />


    <EditText
        android:id="@+id/filmType"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/film_type"
        android:inputType="textShortMessage|textLongMessage"
        android:autofillHints=""
        android:paddingLeft="10sp"
        android:paddingStart="10sp"
        tools:ignore="RtlSymmetry"/>

    <EditText
        android:id="@+id/filmYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/year"
        android:autofillHints=""
        android:inputType="number"
        android:paddingStart="10sp"
        android:paddingLeft="10sp"
        android:textSize="25sp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/filmDescription"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/descrioption"
        android:inputType="textShortMessage|textLongMessage|text"
        android:autofillHints=""
        android:paddingLeft="10sp"
        android:paddingStart="10sp"
        tools:ignore="RtlSymmetry"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/priority"
            android:paddingLeft="10sp"
            android:paddingStart="10sp"
            tools:ignore="RtlSymmetry"/>


        <TextView
            android:id="@+id/priority_value"
            android:textSize="25sp"
            android:paddingLeft="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_value"
            android:paddingStart="20sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <SeekBar

        android:id="@+id/priority"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/add_button"/>

</LinearLayout>