<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.BookEditFragment">

    <EditText
        android:id="@+id/bookTittle"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/tittle"
        android:inputType="textShortMessage|textLongMessage|text"
        android:autofillHints=""
        android:paddingLeft="10sp"
        android:paddingStart="10sp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/bookAuthor"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/author"
        android:inputType="textShortMessage|textLongMessage|text"
        android:autofillHints=""
        android:paddingLeft="10sp"
        android:paddingStart="10sp"
        tools:ignore="RtlSymmetry"/>

    <EditText
        android:id="@+id/bookType"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/type"
        android:inputType="textShortMessage|textLongMessage"
        android:autofillHints=""
        android:paddingLeft="10sp"
        android:paddingStart="10sp"
        tools:ignore="RtlSymmetry"/>

    <EditText
        android:id="@+id/bookDescription"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/descrioption"
        android:inputType="textShortMessage|textLongMessage|text"
        android:autofillHints=""
        android:paddingLeft="10sp"
        android:paddingStart="10sp"
        tools:ignore="RtlSymmetry"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/priority"
            android:paddingLeft="10sp"
            android:paddingStart="10sp"
            tools:ignore="RtlSymmetry"/>


        <TextView
            android:id="@+id/priority_value"
            android:textSize="25sp"
            android:paddingLeft="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_value"
            android:paddingStart="20sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <SeekBar

        android:id="@+id/priority"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>
</layout>